--- a/index.html
+++ b/index.html
@@ -1,32 +1,149 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>YU'S FAMILIES </title>
-<style type="text/css">
-<!--
-body {
-	color:#000000;
-	background-color:#0072C6;
-	margin:0;
-}
+﻿<!DOCTYPE html>
+<html>
+  <head>
+    <title>index</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
+    <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
+    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/index/styles.css" type="text/css" rel="stylesheet"/>
+    <script src="resources/scripts/jquery-1.7.1.min.js"></script>
+    <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
+    <script src="resources/scripts/prototypePre.js"></script>
+    <script src="data/document.js"></script>
+    <script src="resources/scripts/prototypePost.js"></script>
+    <script src="files/index/data.js"></script>
+    <script type="text/javascript">
+      $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
+      $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
+      $axure.utils.getReloadPath = function() { return 'resources/reload.html'; };
+    </script>
+  </head>
+  <body>
+    <div id="base" class="">
 
-#container {
-	margin-left:auto;
-	margin-right:auto;
-	text-align:center;
-	}
+      <!-- Unnamed (图片 ) -->
+      <div id="u0" class="ax_default image">
+        <img id="u0_img" class="img " src="images/index/u0.png"/>
+      </div>
 
-a img {
-	border:none;
-}
+      <!-- Unnamed (组合 ) -->
+      <div id="u1" class="ax_default" data-left="190" data-top="182" data-width="97" data-height="16">
 
--->
-</style>
-</head>
-<body>
-<div id="container">
-<a><img src="yuxiaoxiao_1.jpg" alt="IIS" width="890" height="1344" /></a>
-</div>
-</body>
+        <!-- Unnamed (单选按钮) -->
+        <div id="u2" class="ax_default radio_button">
+          <label for="u2_input" style="position: absolute;">
+            <div id="u2_text" class="text " style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </label>
+          <input id="u2_input" type="radio" value="radio" name="单选按钮1"/>
+        </div>
+
+        <!-- Unnamed (单选按钮) -->
+        <div id="u3" class="ax_default radio_button">
+          <label for="u3_input" style="position: absolute;">
+            <div id="u3_text" class="text " style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </label>
+          <input id="u3_input" type="radio" value="radio" name="单选按钮1"/>
+        </div>
+
+        <!-- Unnamed (单选按钮) -->
+        <div id="u4" class="ax_default radio_button">
+          <label for="u4_input" style="position: absolute;">
+            <div id="u4_text" class="text " style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </label>
+          <input id="u4_input" type="radio" value="radio" name="单选按钮1"/>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u5" class="ax_default box_2">
+        <div id="u5_div" class=""></div>
+      </div>
+
+      <!-- 姓名 (文本框) -->
+      <div id="u6" class="ax_default text_field" data-label="姓名" title="用户名">
+        <input id="u6_input" type="text" value="" title="用户名"/>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u7" class="ax_default _三级标题">
+        <div id="u7_div" class=""></div>
+        <div id="u7_text" class="text ">
+          <p><span>Username</span></p>
+        </div>
+      </div>
+
+      <!-- 密码 (文本框) -->
+      <div id="u8" class="ax_default text_field" data-label="密码">
+        <input id="u8_input" type="password" value=""/>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u9" class="ax_default _三级标题">
+        <div id="u9_div" class=""></div>
+        <div id="u9_text" class="text ">
+          <p><span>Password</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u10" class="ax_default link_button">
+        <div id="u10_div" class=""></div>
+        <div id="u10_text" class="text ">
+          <p><span>sign</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u11" class="ax_default primary_button">
+        <div id="u11_div" class=""></div>
+      </div>
+
+      <!-- 图片切换驱动 (矩形) -->
+      <div id="u12" class="ax_default box_2" data-label="图片切换驱动" title="图片切换驱动">
+        <div id="u12_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u13" class="ax_default primary_button ax_default_hidden" style="display:none; visibility: hidden">
+        <div id="u13_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u14" class="ax_default _三级标题">
+        <div id="u14_div" class=""></div>
+        <div id="u14_text" class="text ">
+          <p><span>LOGIN</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (热区) -->
+      <div id="u15" class="ax_default">
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u16" class="ax_default _三级标题 ax_default_hidden" style="display:none; visibility: hidden">
+        <div id="u16_div" class=""></div>
+        <div id="u16_text" class="text ">
+          <p><span>please ensure that the input ID is valid！</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u17" class="ax_default _三级标题 ax_default_hidden" style="display:none; visibility: hidden">
+        <div id="u17_div" class=""></div>
+        <div id="u17_text" class="text ">
+          <p><span>登录成功</span></p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
