修复资源框问题

--- a/carton.html
+++ b/carton.html
@@ -44,7 +44,7 @@ function textticker()
   go = setInterval(textlist, sd);
  }
 	function say_liya(){
-		document.getElementById("img1").src="say1.jpg";
+		document.getElementById("img1").src="say1.png";
 		document.getElementById("img2").src="tim1.png";
 		document.getElementById("liya_1").innerHTML="  我是liya，现在是我在说话~,如果我说了很多的话会是神马样的展现效果，我尝试一下"
 		document.getElementById("img3").src="";
@@ -58,7 +58,7 @@ function textticker()
 		document.getElementById("img1").src="";
 		document.getElementById("img2").src="";
 		document.getElementById("yoyi_1").innerHTML="我是yoyi，现在轮到我在说话~"
-		document.getElementById("img3").src="say2.jpg";
+		document.getElementById("img3").src="say2.png";
 		document.getElementById("img4").src="tim2.png";
 		document.getElementById("liya_1").innerHTML=""
 		x="yoyi_1";
