加一个快速连接

--- a/page1.html
+++ b/page1.html
@@ -60,5 +60,6 @@
         </div>
       </div>
     </div>
+    <button onclick="window.location.href('http://www.tangguotang.com/carton.html')"> 跳过去</button>
   </body>
 </html>
