--- a/page1.html
+++ b/page1.html
@@ -61,5 +61,6 @@
       </div>
     </div>
     <button onclick="window.location.href='http://www.tangguotang.com/carton.html'"> 跳过去</button>
+    <button onclick="window.location.href='http://www.tangguotang.com/my_dear.html'"> mydear</button>
   </body>
 </html>
