--- a/web/test.html
+++ b/web/test.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <title>www.layabox.com</title>
+    <title>www.tangguotang.com</title>
+	<link rel="icon" href="data:;base64,=">
     <meta charset='utf-8' />
     <meta name='renderer' content='webkit' />
     <meta name='viewport' content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no'
